# VoxelScout

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
benchmarks/: benchmark_viewer.py
data/: README.md
docs/: VoxelScout.docx  system_design.md  ~$xelScout.docx
src/voxelscout/: __init__.py  anatomy.py  appearance.py  build_inventory.py  ct_display.py  ct_overlay.py  ct_review.py  desktop_app.py  desktop_data.py  dicom_import.py  inspect_case.py  prepare_nnunet.py  preprocess_case.py  spatial_guides.py  viewer.py  viewer_data.py
src/voxelscout/inference/: __init__.py  backend.py  labels.py  metrics.py  nnunet_backend.py  workflow.py
tests/: test_appearance.py  test_build_inventory.py  test_ct_display.py  test_ct_overlay.py  test_desktop_data.py  test_dicom_import.py  test_inference_workflow.py  test_inspect_case.py  test_prepare_nnunet.py  test_preprocess_case.py  test_segmentation_metrics.py  test_spatial_guides.py  test_viewer.py  test_viewer_data.py
