[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "voxelscout"
version = "0.2.0"
description = "A patient-facing viewer for accessible spinal CT exploration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.13",
  "monai>=1.6,<1.7",
  "nibabel>=5.3,<6",
  "numpy>=2.0,<3",
  "matplotlib>=3.10,<4",
  "scikit-image>=0.25,<1",
  "plotly>=6,<7",
  "streamlit>=1.49,<2",
]

[project.scripts]
voxelscout-inspect = "voxelscout.inspect_case:main"
voxelscout-inventory = "voxelscout.build_inventory:main"
voxelscout-preprocess = "voxelscout.preprocess_case:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
